# projetos-py

./: .gitignore  SistemaBanco.py  pyproject.toml  requirements.txt
Agenda/: db.sqlite3
Agenda/agenda/: asgi.py  settings.py  urls.py  wsgi.py
Agenda/core/: admin.py  models.py  views.py
Agenda/core/migrations/: 0001_initial.py  0002_evento_usuario_alter_evento_data_evento.py
Agenda/templates/: agenda.html  evento.html  login.html  model-footer.html
AnaliseDados/: main.py
Aulas/Automatizacao/: main.py
Aulas/Cliente/: TCP.py
Aulas/Hashes/: b.txt  gerador_hashes.py
Aulas/ImageProcessing/: setup.py
Aulas/Phone/: verificar_mumero.py
Aulas/Ping/: PingMultiplo.py
Aulas/Scraping/: ws.py
Aulas/Threads/: th.py
Aulas/VerificadorIp/: VerifExt.py
AutomacaoWebBuscaInfo/: commodities.xlsx  mains.py
Automatizacao/: main.py
Cliente/: UDP.py
Desafio_integrando_Py_sqLite_Mongodb/: Projeto_Integrando_Python_SQLite_MongoDB.py
EnquenteHashtag/mysite/: db.sqlite3
EnquenteHashtag/mysite/polls/: models.py
GeradorSenhas/: gs.py
Hashes/: a.txt  comparador_hashes.py
HelloDjango/HelloDjango/: settings.py  urls.py
MovimentoBancario/: SistemaBanco.py
Openbrowser/: OpBw.py
Ping/: PingSimples.py
PrevisaoDePrecos/: main.py
PrevisaoTempo/: main.py
Twitter/: pyproject.toml
WordLists/: GeradorListas.py
